MCR-3230 Enable PMD rule MethodReturnsInternalArray